# waybar_adhan_script

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
waybar_adhan_script/: main.py
